app/static/styles/room.css
.room-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 1px solid black;
  margin: 30px;
  padding: 20px;
}

.room-header {
  text-align: center;
  margin-bottom: 10px;
}

.message-box {
  overflow: none;
  position: relative;
  width: 50vw;
  height: 75vh;
  background-color: black;
}

.messages {
  overflow: auto;
  position: absolute;
  bottom: 50px;
  max-height: 69.6vh;
  color: white;
  margin-left: 10px;
  width: 100%;
}

.input {
  position: absolute;
  bottom: 0;
  display: flex;
  padding: 5px;
}

#message {
  width: 46vw;
  height: 40px;
}

#send-btn {
  width: 3vw;
  margin-left: 5px;
  margin-right: 5px;
}

.msg-text {
  font-size: 1.2rem;
}

.msg-date {
  font-size: 0.5rem;
  position: absolute;
  right: 15px;
}

